chore: Add issue get command for FoD and SSC (#978)
feat: `fcli fod issue get`: New command for retrieving issue data for a single issue

feat: `fcli ssc issue get`: New command for retrieving issue data for a single issue